[B]Retrospect v5.4.2 - Changelog - 2021-06-27[/B]

A minor update to Retrospect with fixes for RTV Oost Live streams.

[B]Framework related[/B]
* Updated: Allow tests to switch channel code.

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: RTV Oost live streams (Fixes #1529).
* Fixed: Minor KetNet issue with video titles.