@@ -11,3 +11,4 @@ _None_
 [B]Channel related[/B]
 * Fixed: RTV Oost live streams (Fixes #1529).
 * Fixed: Minor KetNet issue with video titles.
+* Fixed: HLS streams for SVT are not stopping at the end. Using Dash for now (See #1433).
